<resources>

   <string name="app_name">BMI Calculator</string>
   <string name="menu_settings">Settings</string>
   <string name="title">BMI Calculator</string>
   <string name="button_add_contact">Add Entry</string>
   <string name="save_btn">Save Entry</string>
   
   <string name="add_menu">Add Entry</string>
   <string name="edit_menu">Edit Entry</string>
   <string name="delete_menu">Delete Entry</string>
   
   <string name="name_hint">Date</string>
   <string name="cap_hint">Weight</string>
   <string name="code_hint">BMI</string>
   
   <string name="name_lbl">Date</string>
   <string name="cap_lbl">Weight</string>
   <string name="code_lbl">BMI</string>
   
   <string name="confirmTitle">Are You Sure?</string>
   <string name="confirmMessage">This will permanently Delete the Entry</string>
   
   <string name="errorButton">OK</string>
   <string name="errorTitle">Date is Required</string>
   <string name="errorMessage">You Need to Enter a Date</string>
   
   <string name="cancel_btn">Cancel</string>
   <string name="delete_btn">Delete</string>
   

    <string name="action_settings">Settings</string>
    <string name="lblWeight">Your Weight (lbs)</string>
    <string name="lblHeight">Your Height (feets)</string>
    <string name="btnCalculate">"Calculate"</string>
    <string name="emptyString"></string>
    <string name="btnTblResult">TABLE RESULT</string>
    <string name="btnGraphResult">GRAPH RESULT</string>
    <string name="btnSettings">SETTINGS</string>
    <string name="lblname">Name:</string>
    <string name="lblAge">Age:</string>
    <string name="radMale">Male</string>
    <string name="btnGotoCalculator">CALCULATOR</string>
    <string name="btnBMISrc">BMI SOURCES</string>
    <string name="lblResult">Your result displayed here.</string>
    <string name="btnShare">Share</string>
    <string name="btnFB">Share FB</string>

</resources>