<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnTblResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"
        android:onClick="gotoClickHandler"
        android:text="@string/btnTblResult" />

    <Button
        android:id="@+id/btnGraphResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnTblResult"
        android:text="@string/btnGraphResult" />

    <Button
        android:id="@+id/btnGotoCalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnGraphResult"
        android:onClick="gotoClickHandler"
        android:text="@string/btnGotoCalculator" />

    <Button
        android:id="@+id/btnBMISrc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnGotoCalculator"
        android:onClick="gotoClickHandler"
        android:text="@string/btnBMISrc" />

</RelativeLayout>