<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent" 
   android:layout_height="wrap_content" android:layout_weight="1">
   
   <LinearLayout android:id="@+id/linearLayout"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" 
      android:padding="5dp">
      
      <EditText android:id="@+id/dateEdit"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" 
         android:hint="@string/name_hint"
         android:inputType="date"/>
      
      <EditText android:id="@+id/capEdit"
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" 
         android:hint="@string/cap_hint"
         />
      
      <EditText android:id="@+id/codeEdit" 
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" 
         android:hint="@string/code_hint" 
         android:inputType="numberDecimal"/>
            
      <Button
          android:id="@+id/btnSave"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:layout_marginTop="15dp"
          android:text="@string/save_btn" />

      <EditText
          android:id="@+id/txtForceSave"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:ems="10"
          android:width="0dp" />

          <requestFocus />


   </LinearLayout>
</ScrollView>