<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:onClick="calculateClickHandler"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/lblWeight"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/weightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtName"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/weightText"
        android:layout_below="@+id/weightText"
        android:layout_marginTop="16dp"
        android:text="@string/lblHeight"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/heightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtAge"
        android:layout_below="@+id/txtAge"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/heightText"
        android:text="@string/emptyString"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/resultHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calculateButton"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="26dp"
        android:text="@string/emptyString"
        android:width="0dp"
        android:color="@android:color/transparent" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSaveEntry"
        android:layout_alignLeft="@+id/btnSaveEntry"
        android:onClick="calculateClickHandler"
        android:text="@string/btnCalculate" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/resultLabel"
        android:layout_alignParentBottom="true"
        android:onClick="calculateClickHandler"
        android:text="@string/btnShare" />

    <Button
        android:id="@+id/btnSaveEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnShare"
        android:layout_alignLeft="@+id/btnShare"
        android:onClick="calculateClickHandler"
        android:text="@string/save_btn" />

    <Button
        android:id="@+id/btnFB"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/calculateButton"
        android:layout_alignRight="@+id/calculateButton"
        android:text="@string/btnFB" />

</RelativeLayout>